Cleaned up the CMake file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,22 @@
 # CMakeLists.txt file for Bakteria - the interesting game of bacteria
-# (c) Kristian K. Skordal 2009 - 2011
+# (c) Kristian K. Skordal 2009 - 2012
 cmake_minimum_required(VERSION 2.6)
 
 project(bacteria)
 
-set(SOURCE_FILES application.cpp bacteria.cpp config_db.cpp config_parser.cpp energy_bar.cpp food.cpp image.cpp logger.cpp main.cpp statistics.cpp vector.cpp)
-
-set(CMAKE_INSTALL_PREFIX "/usr")
+set(SOURCE_FILES
+	application.cpp
+	bacteria.cpp
+	config_db.cpp
+	config_parser.cpp
+	energy_bar.cpp
+	food.cpp
+	image.cpp
+	logger.cpp
+	main.cpp
+	statistics.cpp
+	vector.cpp
+)
 
 find_package(SDL REQUIRED)
 if(NOT SDL_FOUND)
@@ -36,9 +46,45 @@ else(NOT DISABLE_SDLTTF)
 	target_link_libraries(bacteria ${SDL_LIBRARY} rt)
 endif(NOT DISABLE_SDLTTF)
 
-install(FILES graphics/bacteria.bmp graphics/food.bmp graphics/red.bmp graphics/yellow.bmp graphics/green.bmp icon.png DESTINATION share/bacteria/graphics)
-install(FILES DejaVuSans.ttf DESTINATION share/bacteria)
-install(FILES bacteria.desktop DESTINATION share/applications)
-install(PROGRAMS bacteria DESTINATION bin)
-install(FILES docs/config.txt docs/controls.txt docs/quickstart.txt DESTINATION share/doc/bacteria)
+# Install image files:
+install(FILES
+		graphics/bacteria.bmp
+		graphics/food.bmp
+		graphics/red.bmp
+		graphics/yellow.bmp
+		graphics/green.bmp
+		icon.png
+	DESTINATION
+		share/bacteria/graphics
+)
+
+# Install the font file:
+install(FILES
+		DejaVuSans.ttf
+	DESTINATION
+		share/bacteria
+)
+
+# Install the desktop file:
+install(FILES
+		bacteria.desktop
+	DESTINATION
+		share/applications
+)
+
+# Install the binary file:
+install(PROGRAMS
+		bacteria
+	DESTINATION
+		bin
+)
+
+# Install the documentation:
+install(FILES
+		docs/config.txt
+		docs/controls.txt
+		docs/quickstart.txt
+	DESTINATION
+		share/doc/bacteria
+)
 
