--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
-# git ls-files --others --exclude-from=.git/info/exclude
-# Lines that start with '#' are comments.
-# For a project mostly in C, the following would be a good set of
-# exclude patterns (uncomment them if you want to use them):
+# Various build related files:
 *.[oa]
-*~
 CMakeFiles/*
 CMakeCache.txt
 cmake_install.cmake
 Makefile
-.*.swp
 bacteria
 graph_data.dat
+
+# Vim swap files:
+.*.swp
+.*.swo
+
+# GEdit and other editor swap files:
+*~
 
