Did a little cleanup of the configuration system.
Removed unneccessary or reduntant defines in config.h.
Command line arguments now override config file arguments.

--- a/default_config.cfg
+++ b/default_config.cfg
@@ -4,15 +4,16 @@
 # (c) Kristian K. Skordal 2009 - 2012
 #
 
+DatalogFilename = graph_data.dat
+FeedingEnergy = 6
+FoodEnergy = 800
+FoodSmellingDistance = 50
+FoodSpawningRate = 50
+FramesPerSecond = 25
+Fullscreen = false
+GrowthRateSamplingInterval = 1
+LoggerUpdateInterval = 100
+ReproductionEnergy = 500
 StartingPopulation = 10
 StartingFood = 10
-FramesPerSecond = 25
-FoodSmellingDistance = 50
-FoodEnergy = 800
-ReproductionEnergy = 500
-FeedingEnergy = 6
-FoodSpawningRate = 50
-DatalogFilename = graph_data.dat
-LoggerUpdateInterval = 100
-GrowthRateSamplingInterval = 1
 
